Prepared For Major Dev

--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="initial-scale = 1.0" />
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <style>
-            body {
-                padding-top: 60px;
-                padding-bottom: 40px;
-            }
-        </style>
         <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
         <link rel="stylesheet" href="css/main.css">
 
@@ -23,11 +17,11 @@
         <![endif]-->
     </head>
     <body>
-        
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-
+        <div class="logo centerHorizontal centerVertical"><span class="block">PICTURE</span><span class="block">PERFECT</span></div>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
-
+        <script src="js/vendor/midway.min.js"></script>
+        <script>midway();</script>
         <script src="js/main.js"></script>
     </body>
 </html>
