--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <![endif]-->
     </head>
     <body>
-        <div class="logo centerHorizontal centerVertical"><span class="block">PICTURE</span><span class="block">PERFECT</span></div>
+        <div class="logo centerHorizontal centerVertical"><span class="block">PICTURE</span><span class="block">PERFECT</span>
+        <img class="logo centerHorizontal" src="img/Map@2x.png"></div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/midway.min.js"></script>
