--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </head>
     <body>
         <div class="logo centerHorizontal centerVertical"><span class="block">PICTURE</span><span class="block">PERFECT</span>
-        <img class="logo centerHorizontal" src="img/Map@2x.png"></div>
+        <img class="logo centerHorizontal" src="img/Map@2x.png"><input type="button" class="btn-large btn-block btn" value="Snap">
+        </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/midway.min.js"></script>
