--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="initial-scale = 1.0" />
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/flat-ui.css">
         <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
         <link rel="stylesheet" href="css/main.css">
 
@@ -18,7 +19,7 @@
     </head>
     <body>
         <div class="logo centerHorizontal centerVertical"><span class="block">PICTURE</span><span class="block">PERFECT</span>
-        <img class="logo centerHorizontal" src="img/Map@2x.png"><input type="button" class="btn-large btn-block btn" value="Snap">
+        <img class="logo" src="img/Map@2x.png"/><input type="button" class="btn-large btn-inverse btn" value="Snap">
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
