--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
         <meta name="description" content="">
-        <meta name="viewport" content="initial-scale = 1.0" />
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/flat-ui.css">
@@ -18,13 +17,23 @@
         <![endif]-->
     </head>
     <body>
-        <div class="logo centerHorizontal centerVertical"><span class="block">PICTURE</span><span class="block">PERFECT</span>
-        <img class="logo" src="img/Map@2x.png"/><input type="button" class="btn-large btn-inverse btn" value="Snap">
+        <div id="bg"></div>
+        <div id="over" class="logo centerHorizontal centerVertical"><span class="block">PICTURE</span><span class="block">PERFECT</span>
+        <img class="logo" src="img/Map@2x.png"/><input type="button" id="snap" class="btn-large btn-inverse btn" value="Snap">
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/midway.min.js"></script>
         <script>midway();</script>
+        <script>
+    $('#snap').on("click", overtoggle);
+ function overtoggle() {
+ $('#over').css({"opacity" : "0"})
+ setTimeout(function () {
+  $('#over').css({"display" : "none"})
+ }, 1000);
+ 
+}</script>
         <script src="js/main.js"></script>
     </body>
 </html>
