--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="bg"></div>
         <div id="googleMap"></div>
         <div id="over" class="logo centerHorizontal centerVertical"><span class="block">PICTURE</span><span class="block">PERFECT</span>
-        <img class="logo" src="img/Map@2x.png"/><input type="button" id="snap" class="btn-large btn-white btn" value="Snap">
+        <img class="logo" src="img/Map@2x.png"/><input type="button" id="snap" class="btn-large btn-robor btn" value="Snap">
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAue8HUBWPfP9K6blbupxpEYHCj98VnWi0&sensor=false"></script>
